--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,16 @@
 trigger:
-- none
+  - none
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '20.x'
-  displayName: 'Install Node.js'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: "20.x"
+    displayName: "Install Node.js"
 
-- script: |
-    npm install
-    npm test
-  displayName: 'npm install and test'
+  - script: |
+      npm install
+      npm test
+    displayName: "npm install and test"
