--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,12 @@ steps:
       npx playwright install
       npm test
     displayName: "Install and Test"
+
+  - task: PublishTestResults@2
+    displayName: Publish Test Results
+    inputs:
+      testResultsFormat: "JUnit"
+      testResultsFiles: "**/junit-results.xml"
+      searchFolder: "$(System.DefaultWorkingDirectory)"
+      mergeTestResults: true
+      failTaskOnFailedTests: false
