job status as amber if failures

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,9 @@ steps:
       mergeTestResults: true
       failTaskOnFailedTests: false
     displayName: Publish Test Results
+
+  - script: |
+      if [ "$(TestResultFailures)" != "0" ]; then
+        echo "##vso[task.complete result=SucceededWithIssues;]"
+      fi
+    displayName: Set job status to Amber if failures
