--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,10 +18,8 @@ steps:
 
   - task: PublishTestResults@2
     inputs:
-      testResultsFormat: "JUnit"
-      testResultsFiles: "**/junit-results.xml"
-      searchFolder: "$(System.DefaultWorkingDirectory)"
-      mergeTestResults: true
+      testResultsFormat: "VSTest"
+      testResultsFiles: "**/*.trx"
       failTaskOnFailedTests: false
     displayName: Publish Test Results
 
@@ -29,4 +27,4 @@ steps:
       if [ "$(TestResultFailures)" != "0" ]; then
         echo "##vso[task.complete result=SucceededWithIssues;]"
       fi
-    displayName: Set job status to Amber if failures
+    displayName: Set Job Atatus to Amber if failures
