--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,3 +33,9 @@ steps:
         echo "##vso[task.complete result=SucceededWithIssues;]"
       fi
     displayName: Set Job Status to Amber on Failures
+
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: test-results
+      artifact: junit-xml
+    displayName: Publish JUnit XML
