--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ steps:
     displayName: "Install Node.js"
 
   - script: |
-      npm install
-      npx playwright install
+      npm ci
+      npx playwright install --with-deps
     displayName: "Install Dependencies"
 
   - script: |
@@ -20,23 +20,15 @@ steps:
     continueOnError: true
     displayName: "Test with Playwright"
 
-  - task: PublishTestResults@2
-    inputs:
-      testResultsFormat: "JUnit"
-      testResultsFiles: "**/junit.xml"
-      searchFolder: "$(System.DefaultWorkingDirectory)"
-      mergeTestResults: true
-      failTaskOnFailedTests: false
-    displayName: Publish Test Results
-
   - task: PublishPipelineArtifact@1
     inputs:
-      targetPath: test-results
+      targetPath: "$(System.DefaultWorkingDirectory)/junit.xml"
       artifact: junit-xml
-    displayName: Publish Downloadable JUnit XML
+    condition: always()
+    displayName: "Publish JUnit XML"
 
   - task: PublishPipelineArtifact@1
     inputs:
       path: "$(System.DefaultWorkingDirectory)/playwright-report"
       artifact: html-report
-    displayName: Publish Downloadable HTML report
+    displayName: Publish HTML Report
