--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ steps:
     displayName: "Install Node.js"
 
   - script: |
-      npm ci
-      npx playwright install --with-deps
+      npm install
+      npx playwright install
     displayName: "Install Dependencies"
 
   - script: |
